fix external-tooltip cover because z-index

--- a/styles.css
+++ b/styles.css
@@ -56,6 +56,7 @@
     box-shadow: var(--shadow-l);
     background-color: var(--background-primary);
     padding: 10px;
+    z-index: 9999;
 }
 
 .drawio-external-tooltip a {
